# bowtie-risk-analytics-oilgas

./: .dockerignore  .env.example  .gitattributes  .gitignore  00_CURRENT_STATE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  EVALUATION.md  HANDOVER.md  KNOWN_ISSUES.md  LICENSE  Makefile  POST_DEMO_FIX_LIST.md  README.md  SPRINT_1_QUICK_WINS.md  SPRINT_2_EVIDENCE_PANEL.md  SPRINT_3_BOWTIE_OVERHAUL.md  SPRINT_4_POLISH.md  UI-CONTEXT.md  VERIFICATION_REPORT_2026-04-25.md  docker-compose.yml  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
HANDOVER_BUNDLE/: FILE_INDEX.txt
configs/: denominators.json  model_policy.yaml
data/: README.md
deploy/: .dockerignore  Dockerfile.api  Dockerfile.frontend  README.md  deploy.sh  docker-compose.server.yml  nginx.conf  start.sh
docs/: DECISIONS.md  DEPLOY.md  DEPLOYMENT_ENV.md  DEVLOG.md  STEP_TRACKER.md  api_contract.md  loc_definition_v1.md  rag_experiment_history.md  rag_system_overview.md  requirements.md  tech-debt.md
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  playwright.audit.config.ts  playwright.config.ts  tailwind.config.js  vitest.config.mts
nginx/: nginx.conf
scripts/: README.md  build_demo_scenarios.py  build_rag_v2.py  evaluate_retrieval.py  extract_threat_barrier_pairs.py  generate_apriori_rules.py  generate_audit_docx.py  generate_audit_report.py  generate_lessons_learned.py  generate_risk_thresholds.py  jsonaggregation.py  make_deliverable_pack.sh  pack_handover_bundle.sh  run_analytics.py  verify_and_bundle_schema_v2_3.sh  verify_cascading_shap.py
src/: __init__.py  pipeline.py
tests/: README.md  __init__.py  conftest.py  test_aggregation.py  test_analytics.py  test_anthropic_provider.py  test_api.py  test_app_utils.py  (+64 more)
(+413 files in other folders)
