[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bowtie-risk-analytics"
version = "0.1.0"
description = "Bowtie Risk Analytics for Oil & Gas - Incident analysis and risk visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=3.2.0",
    "shap>=0.51.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "joblib>=1.3.0",
    "PyYAML>=6.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
pipeline = [
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "pdfminer.six>=20221105",
    "beautifulsoup4>=4.12.0",
]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
